--- a/Run3_Resolution_Scripts/UpdatedCode/varlist.yaml
+++ b/Run3_Resolution_Scripts/UpdatedCode/varlist.yaml
@@ -1,19 +1,22 @@
-mu1_pt: [50, 0, 180, "Leading Muon p_{T} [GeV]", 0.8, 1.2]
+mu1_pt: [50, 0, 180, "Leading Muon p_{T} [GeV]", 0.9, 1.1]
 mu1_ptErr: [50, 0, 2.0, "Leading Muon p_{T} Error [GeV]", 0.0, 2.0]
-mu1_Ratio_pTErr_pt: [50, 0, 0.035, "Leading Muon p_{T} Error / p_{T}", 0.0, 2.0]
-mu1_eta: [50, -2.4, 2.4, "Leading Muon #eta", 0.8, 1.2]
-mu1_phi: [25, -3.15, 3.15, "Leading Muon #phi", 0.8, 1.2]
+ratio_pTErr_pt_mu1: [50, 0, 0.035, "Leading Muon p_{T} Error / p_{T}", 0.0, 2.0]
+mu1_eta: [50, -2.4, 2.4, "Leading Muon #eta", 0.95, 1.05]
+mu1_phi: [25, -3.15, 3.15, "Leading Muon #phi", 0.95, 1.05]
 
-mu2_pt: [50, 0, 100, "Sub-leading Muon p_{T} [GeV]", 0.8, 1.2]
+mu2_pt: [50, 0, 100, "Sub-leading Muon p_{T} [GeV]", 0.85, 1.15]
 mu2_ptErr: [50, 0, 2.0, "Sub-leading Muon p_{T} Error [GeV]", 0.0, 2.0]
-mu2_Ratio_pTErr_pt: [50, 0, 0.035, "Sub-leading Muon p_{T} Error / p_{T}", 0.0, 2.0]
+ratio_pTErr_pt_mu2: [50, 0, 0.035, "Sub-leading Muon p_{T} Error / p_{T}", 0.0, 2.0]
 mu2_eta: [50, -2.4, 2.4, "Sub-leading Muon #eta", 0.8, 1.2]
 mu2_phi: [25, -3.15, 3.15, "Sub-leading Muon #phi", 0.8, 1.2]
 
-dimuon_pt: [50, 0, 150, "p_{T} (#mu#mu) [GeV]", 0.8, 1.2]
-dimuon_eta: [50, -4.7, 4.7, "#eta_{#mu#mu}", 0.8, 1.2]
-dimuon_phi: [25, -3.15, 3.15, "#phi_{#mu#mu}", 0.8, 1.2]
-dimuon_mass: [50, 100, 160, "m_{#mu#mu} [GeV]", 0.8, 1.2]
+dimuon_pt: [50, 0, 150, "p_{T} (#mu#mu) [GeV]", 0.95, 1.05]
+dimuon_eta: [50, -4.7, 4.7, "#eta_{#mu#mu}", 0.95, 1.05]
+dimuon_phi: [25, -3.15, 3.15, "#phi_{#mu#mu}", 0.95, 1.05]
+dimuon_mass: [50, 70, 110, "m_{#mu#mu} [GeV]", 0.8, 1.2]
+# dimuon_mass: [50, 70, 110, "m_{#mu#mu} [GeV]", 0.8, 1.2, "z-peak"]
+# dimuon_mass: [50, 110, 150, "m_{#mu#mu} [GeV]", 0.8, 1.2, "signal"]
+# dimuon_mass: [50, 115.03, 135.03, "m_{#mu#mu} [GeV]", 0.8, 1.2, "h-peak"]
 dimuon_ebe_mass_res_rel: [25, 0, 0.2, "m_{#mu#mu} Resolution", 0.0, 2.0]
 
 default: [50, 0, 300, "variable", 0.0, 2.0]
