--- a/Run3_Resolution_Scripts/config/plot_config.yaml
+++ b/Run3_Resolution_Scripts/config/plot_config.yaml
@@ -44,13 +44,19 @@ variables:
 
 plot_types:
   plot_1D: false
-  plot_2D: true
+  plot_2D: false
   fit_z_peak: true
-  fit_signal: true
+  fit_signal: false
+
+fit_categories:
+  z-peak:
+    binned: false
+    unbinned: true
+
 
 regions_plot:
   leading_muon:
-    enable: true
+    enable: false
     regions: ["B", "O", "E"]
     variables:
       - mu1_pt
@@ -59,7 +65,7 @@ regions_plot:
       - ratio_pTErr_pt_mu1
 
   subleading_muon:
-    enable: true
+    enable: false
     regions: ["B", "O", "E"]
     variables:
       - mu2_pt
@@ -85,6 +91,3 @@ regions_plot:
       - [dimuon_eta, dimuon_ebe_mass_res_rel]
       - [dimuon_phi, dimuon_ebe_mass_res_rel]
 
-fit_categories:
-  - z-peak
-  - regions
