--- a/configs/parameters/SF_filelist.yaml
+++ b/configs/parameters/SF_filelist.yaml
@@ -213,16 +213,16 @@ zpt_weights_file_valerie:
   '2017': data/reweight_zpt_2018_nJetBinned_new.histo.root
   '2018': data/reweight_zpt_2018_nJetBinned_new.histo.root # Valerie's zpt
 new_zpt_weights_file:
-  2016preVFP: data/zpt_rewgt/ZptReWgt_2016preVFPUL.json # New zpt rewgt Jan 09 2025
-  2016postVFP: data/zpt_rewgt/ZptReWgt_2016postVFPUL.json # New zpt rewgt Jan 09 2025
-  '2017': data/zpt_rewgt/ZptReWgt_2017UL.json # New zpt rewgt Jan 09 2025
-  '2018': data/zpt_rewgt/ZptReWgt_2018UL.json # New zpt rewgt Jan 09 2025
-  2016_RERECO: data/zpt_weights.histo.json
-  '2017_RERECO': data/zpt_weights.histo.json
-  '2018_RERECO': data/zpt_weights.histo.json
+  2016preVFP: data/zpt_rewgt/fitting/zpt_rewgt_params.yaml # New zpt rewgt March 252025
+  2016postVFP: data/zpt_rewgt/fitting/zpt_rewgt_params.yaml # New zpt rewgt March 25 2025
+  '2017': data/zpt_rewgt/fitting/zpt_rewgt_params.yaml # New zpt rewgt March 25 2025
+  '2018': data/zpt_rewgt/fitting/zpt_rewgt_params.yaml # New zpt rewgt March 25 2025
+  2016_RERECO: data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
+  '2017_RERECO': data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
+  '2018_RERECO': data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
   2022preEE: data/reweight_zpt_2018_nJetBinned_new.histo.root
   2022postEE: data/reweight_zpt_2018_nJetBinned_new.histo.root
-jetpuid_sf_file: # old method as of Dec 16 2024, but needed for 2017 UL
+jetpuid_sf_file: # old method as of Dec 16 2024, 
   2016preVFP: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
   2016postVFP: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
   '2017': data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
@@ -237,6 +237,10 @@ jmar_sf_file:
   2016postVFP: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2016postVFP_UL/jmar.json.gz
   '2017': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2017_UL/jmar.json.gz # while this is listed, we use jetpuid_sf_file for 2017 (old method)
   '2018': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2018_UL/jmar.json.gz
+  # 2016preVFP: data/POG/JME/2016preVFP_UL/jmar.json.gz
+  # 2016postVFP: data/POG/JME/2016postVFP_UL/jmar.json.gz
+  # '2017': data/POG/JME/2017_UL/jmar.json.gz # while this is listed, we use jetpuid_sf_file for 2017 (old method)
+  # '2018': data/POG/JME/2018_UL/jmar.json.gz
   2016_RERECO: dummy
   '2017_RERECO': dummy
   '2018_RERECO': dummy
