--- a/configs/parameters/cross_sections.yaml
+++ b/configs/parameters/cross_sections.yaml
@@ -2,6 +2,7 @@ cross_sections:
   test: 6200.0
   dy_M-50: 6077.22 # precision: NNLO source: https://twiki.cern.ch/twiki/bin/viewauth/CMS/StandardModelCrossSectionsat13TeV
   dy_M-50_MiNNLO: 1976
+  dy_M-50_MiNNLO_V2: 2002
   dy_M-50_nocut: 6450.0
   # dy_M-100To200: 247.9 # precision: NLO source: GenAnalyzer tool at https://github.com/green-cabbage/genproductions
   dy_M-100To200: 233.8592627 # precision: NNLO
@@ -77,14 +78,14 @@ cross_sections:
   vbf: 0.0008210722
   vbf_sync: 0.0008210722
   # vbf_powheg: 0.0008210722
-  vbf_powheg_herwig: 0.0008210722
-  vbf_powheg_dipole: 0.0008210722
-  vbf_powhegPS: 0.0008210722
-  vbf_amc_herwig: 0.0008210722
-  vbf_amcPS_TuneCP5down: 0.0008210722
-  vbf_amcPS_TuneCP5up: 0.0008210722
-  vbf_amcPS: 0.0008210722
-  vbf_amc: 0.0008210722
+  vbf_powheg_herwig: 0.0008228
+  vbf_powheg_dipole: 0.0008228
+  vbf_powhegPS: 0.0008228
+  vbf_amc_herwig: 0.0008228
+  vbf_amcPS_TuneCP5down: 0.0008228
+  vbf_amcPS_TuneCP5up: 0.0008228
+  vbf_amcPS: 0.0008228
+  vbf_amc: 0.0008228
   ggh_powhegPS_m120: 0.012652906
   ggh_amcPS_m120: 0.012652906
   vbf_powhegPS_m120: 0.0009534505
