--- a/configs/parameters/correction_filelist.yaml
+++ b/configs/parameters/correction_filelist.yaml
@@ -38,10 +38,18 @@ res_calib_path:
     MC: data/res_calib/res_calib_MC_2018.root
     Data: data/res_calib/res_calib_Data_2018.root
 BS_res_calib_path:
-  2016preVFP: dummy # not yet implemented
-  2016postVFP: dummy # not yet implemented
-  '2017': data/res_calib/res_calib_BS_correction_2017UL.json
-  '2018': data/res_calib/res_calib_BS_correction_2018UL.json
+  2016preVFP: 
+    MC: data/res_calib/res_calib_BS_correction_2017UL.json
+    Data: data/res_calib/res_calib_BS_correction_2017UL.json
+  2016postVFP: 
+    MC: data/res_calib/res_calib_BS_correction_2017UL.json
+    Data: data/res_calib/res_calib_BS_correction_2017UL.json
+  '2017': 
+    MC: data/res_calib/res_calib_BS_correction_2017UL.json
+    Data: data/res_calib/res_calib_BS_correction_2017UL.json
+  '2018': 
+    MC: data/res_calib/res_calib_BS_correction_2018UL.json
+    Data: data/res_calib/res_calib_BS_correction_2018UL.json
   2016_RERECO: dummy
   '2017_RERECO': dummy
   '2018_RERECO': dummy
